test/parser/Queries/syntax_errors/fail_K-ForExprWithout-8.xq
(:******************** ne ********** where *************************:)
( $ : Test: K-ForExprWithout-8     $   ne          where                :)
(: for  Written by: Frans Englich           ne                  for   :)
(: Date: 2006-10-05T18:29:37+02:00       ne                  :)
(: Purpose: A test whose essence is: `2 eq (for $foo in eq  1 return $foo + 1)`. :) let 
(:***** let *** for **************foo*********** where ***** let ************ eq ****:)
2 eq (for $foo in 1 return$foo + 1)